--- a/pacman/index.html
+++ b/pacman/index.html
@@ -176,44 +176,49 @@
     }
 
     function update() {
+
         player.update();
+        fetch("/api/trackPacman?x=" + player.xp + "&y=" + player.yp)
+            .then(function (response) {
+                if (response.status !== 200) {
+                    showInfo("<h1 class='flippedSadFace'>:(</h1> <p>TRACKING PACMANS MOVEMENTS NOT IMPLEMENTED</p>");
+                } else {
+                    console.log(">>> UPDATE <<<")
+                    if (player.xp % CELL_SIZE == 0 && player.yp % CELL_SIZE == 0) {
+                        var cx = player.row = player.xp / CELL_SIZE;
+                        var cy = player.column = player.yp / CELL_SIZE;
 
-            console.log(">>> UPDATE <<<")
-            if (player.xp % CELL_SIZE == 0 && player.yp % CELL_SIZE == 0) {
-                var cx = player.row = player.xp / CELL_SIZE;
-                var cy = player.column = player.yp / CELL_SIZE;
+                        if (upDown && player.dirY > -1 && level.cellData[cx][cy - 1] != 0) player.moveUp();
+                        else if (downDown && player.dirY < 1 && level.cellData[cx][cy + 1] != 0) player.moveDown();
+                        else if (leftDown && player.dirX > -1 && level.cellData[cx - 1][cy] != 0) player.moveLeft();
+                        else if (rightDown && player.dirX < 1 && level.cellData[cx + 1][cy] != 0) player.moveRight();
+                        else if (player.dirX == 1 && level.cellData[cx + 1][cy] == 0) player.stopMovement();
+                        else if (player.dirX == -1 && level.cellData[cx - 1][cy] == 0) player.stopMovement();
+                        else if (player.dirY == 1 && level.cellData[cx][cy + 1] == 0) player.stopMovement();
+                        else if (player.dirY == -1 && level.cellData[cx][cy - 1] == 0) player.stopMovement();
 
-                if (upDown && player.dirY > -1 && level.cellData[cx][cy - 1] != 0) player.moveUp();
-                else if (downDown && player.dirY < 1 && level.cellData[cx][cy + 1] != 0) player.moveDown();
-                else if (leftDown && player.dirX > -1 && level.cellData[cx - 1][cy] != 0) player.moveLeft();
-                else if (rightDown && player.dirX < 1 && level.cellData[cx + 1][cy] != 0) player.moveRight();
-                else if (player.dirX == 1 && level.cellData[cx + 1][cy] == 0) player.stopMovement();
-                else if (player.dirX == -1 && level.cellData[cx - 1][cy] == 0) player.stopMovement();
-                else if (player.dirY == 1 && level.cellData[cx][cy + 1] == 0) player.stopMovement();
-                else if (player.dirY == -1 && level.cellData[cx][cy - 1] == 0) player.stopMovement();
-
-                if (level.cellData[cx][cy] == 1) {
-                    level.pips[cx][cy].munch();
-                    level.cellData[cx][cy] = 2;
-                    ++score;
-                    document.getElementById("score").innerHTML = "SCORE: " + score;
-                    if (score == level.totalPips) {
-                        onGameOver(true);
-                    }
-                }
+                        if (level.cellData[cx][cy] == 1) {
+                            level.pips[cx][cy].munch();
+                            level.cellData[cx][cy] = 2;
+                            ++score;
+                            document.getElementById("score").innerHTML = "SCORE: " + score;
+                            if (score == level.totalPips) {
+                                onGameOver(true);
+                            }
+                        }
 
 //                isSameRow = player.row == ghost.row;
 //                isSameColumn = player.column == ghost.column;
 //                if (isSameRow && isSameColumn) {
 //                    break;
 //                }
-            }
-            else {
-                if (upDown && player.dirY != -1 && player.dirX == 0) player.moveUp();
-                else if (downDown && player.dirY != 1 && player.dirX == 0) player.moveDown();
-                else if (leftDown && player.dirX != -1 && player.dirY == 0) player.moveLeft();
-                else if (rightDown && player.dirX != 1 && player.dirY == 0) player.moveRight();
-            }
+                    }
+                    else {
+                        if (upDown && player.dirY != -1 && player.dirX == 0) player.moveUp();
+                        else if (downDown && player.dirY != 1 && player.dirX == 0) player.moveDown();
+                        else if (leftDown && player.dirX != -1 && player.dirY == 0) player.moveLeft();
+                        else if (rightDown && player.dirX != 1 && player.dirY == 0) player.moveRight();
+                    }
 
 //            if (ghost.xp % CELL_SIZE == 0 && ghost.yp % CELL_SIZE == 0) {
 //                updateGhost();
@@ -233,6 +238,12 @@
 //                    break;
 //                }
 //            }
+                    enableBadge("trackPacmanBadge");
+                }
+            }).catch(function (ex) {
+            console.log(ex)
+            showInfo("<h1 class='flippedSadFace'>:(</h1> <p>IS YOUR GAME SERVER RUNNING?? COULD NOT TRACK PACMANS MOVEMENTS</p>");
+        });
     }
 
     function render() {
@@ -392,15 +403,15 @@
                     info.style.opacity = 0;
                     infobg.style.opacity = 0;
                 } else {
-                    showInfo("<h1 style='transform: rotate(90deg);'>:(</h1> <p>START GAME NOT IMPLEMENTED IN GO YET</p>")
+                    showInfo("<h1 class='flippedSadFace'>:(</h1> <p>START GAME NOT IMPLEMENTED IN GO YET</p>")
                 }
             })
             .catch(function (ex) {
-                showInfo("<h1 style='transform: rotate(90deg);'>:(</h1> <p>START GAME SERVER CALL FAILED. IS YOUR GO SERVER RUNNING??</p>")
+                showInfo("<h1 class='flippedSadFace'>:(</h1> <p>START GAME SERVER CALL FAILED. IS YOUR GO SERVER RUNNING??</p>")
             });
     }
 
-    function enableBadge(badgeId){
+    function enableBadge(badgeId) {
         var element = document.getElementById(badgeId)
         element.classList.remove("disabledBadge");
     }
