Doing the important stuff like title, description and favicon

--- a/pacman/index.html
+++ b/pacman/index.html
@@ -2,16 +2,14 @@
 <!-- saved from url=(0040)http://www.flashmonkey.co.uk/lab/pacman/ -->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" class="no-js">
 <head>
+    <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-
-    <meta name="description" content="A prototype pacman game built using CSS and JavaScript for use across browsers.">
-    <title>CSS &amp; JavaScript PACMAN</title>
+    <meta name="description" content="Making Pacman Go. Building a game server in golang to support a Pacman game in javascript.">
+    <title>Making Pacman Go</title>
 
     <link href="./pacman.css" rel="stylesheet">
     <script src="./keycodes.js"></script>
     <script src="./modernizr.js"></script>
-
 </head>
 
 <body onload="init();">
